<resources>
    <string name="app_name">e-commerce-app</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--Strings related to the signup and login-->
    <string name="prompt_name">Enter Name</string>
    <string name="prompt_user">Enter User Name</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="promp_contact_number">Contact Number</string>

    <string name="forgot">Forgot My Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="error_field_password">This password is incorrect</string>
    <string name="error_empty_field">This field can not be blank</string>

    <!--    Strings related to the login-->
    <string name="signup">Singup</string>

    <!--    Strings related to the Menu-->
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="products">Products</string>
    <string name="tracking">Tracking</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="signout">Signout</string>

    <!--    Strings related to the Profile-->
    <string name="user">User Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="fragment_title">Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_manager">Manager</string>
    <string name="action_delete">Delete</string>
    <string name="please_wait">Please Wait</string>
    <string name="connecting">Connecting...</string>

    <string name="error_field_required">This field is required</string>
    <string name="prompt_is_active">Is Active?</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="prompt_item_name">Enter Item Name</string>
    <string name="prompt_price">Enter Price</string>
    <string name="prompt_contact">Enter Contact</string>
    <string name="prompt_is_provider">Is Provider?</string>

</resources>

