<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/menu_category"
            android:icon="@drawable/ic_categories"
            android:title="@string/category"/>
        <item android:id="@+id/menu_products"
            android:icon="@drawable/ic_products"
            android:title="@string/products"/>
        <item android:id="@+id/menu_tracking"
            android:icon="@drawable/ic_seguimiento_despacho"
            android:title="@string/tracking"/>
        <item android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
    </group>


    <item android:title="Configuración">
        <menu>
            <item android:id="@+id/menu_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>
            <item android:id="@+id/menu_signout"
                android:icon="@drawable/ic_signout"
                android:title="@string/signout"/>
        </menu>
    </item>
</menu>